Project EasyTime {
  database_type: "SQLite"
  Note: "Zeiterfassung & Urlaubsverwaltung — AHA Appup"
}

// ─── KERN ────────────────────────────────────────────────────────────────────

Table mitarbeiter {
  id              integer     [pk, increment]
  personal_id     varchar(30)
  vorname         varchar(45) [not null]
  nachname        varchar(45) [not null]
  email           varchar(100)
  password        varchar(200)
  berechtigung    varchar(45)
  status          tinyint

  // Kontakt
  firmen_telefon  varchar(45)
  privat_telefon  varchar(45)

  // Adresse
  strasse         varchar(45)
  hausnummer      varchar(45)
  plz             integer
  ort             varchar(45)

  // Personalien
  geb_datum       date
  sv_nummer       varchar(45)
  geschlecht      varchar(45)
  iban            varchar(45)
  bic             varchar(45)

  // Stelle
  position        varchar(45)
  weitere_position varchar(45)
  akt_wochen_std  integer
  urlaubsanspruch integer
  bemerkung       text
}

Table standorte {
  id           integer     [pk, increment]
  ort          varchar(150) [not null]
  strasse      varchar(45)
  hausnummer   varchar(45)
  plz          integer
  kostenstelle integer
}

// ─── ZUORDNUNGEN ─────────────────────────────────────────────────────────────

Table mitarbeiter_standorte {
  mitarbeiter_id integer [not null, ref: > mitarbeiter.id]
  standort_id    integer [not null, ref: > standorte.id]
  basis          tinyint [not null]

  indexes {
    (mitarbeiter_id, standort_id) [pk]
  }
}

Table standort_vertretung {
  id           integer [pk, increment]
  standort_id  integer [not null, ref: > standorte.id]
  vertreter_id integer [not null, ref: > standorte.id]
  prioritaet   integer [not null]
}

Table klassen {
  id             integer     [pk, increment]
  klasse         varchar(45)
  mitarbeiter_id integer [not null, ref: > mitarbeiter.id]
}

// ─── ZEITERFASSUNG ───────────────────────────────────────────────────────────

Table taetigkeitsart {
  id          integer     [pk, increment]
  bezeichnung varchar(45) [not null]
}

Table taetigkeit {
  id               integer      [pk, increment]
  datum            date         [not null]
  mitarbeiter_id   integer      [not null, ref: > mitarbeiter.id]
  taetigkeitsart_id integer     [not null, ref: > taetigkeitsart.id]
  stunden          decimal(10,3)

  indexes {
    (datum, mitarbeiter_id, taetigkeitsart_id) [unique, name: "uq_taetigkeit"]
  }
}

Table zuschlag {
  mitarbeiter_id integer [not null, ref: > mitarbeiter.id]
  datum          date    [not null]
  gr10_pro_tag   decimal(10,3)
  wochenende     decimal(10,3)
  nacht          decimal(10,3)
  A              decimal(10,3)
  C              decimal(10,3)
  E              decimal(10,3)
  F              decimal(10,3)
  D              decimal(10,3)
  theorie        decimal(10,3)

  indexes {
    (mitarbeiter_id, datum) [pk]
  }
}

Table uebertrag {
  mitarbeiter_id      integer [not null, ref: > mitarbeiter.id]
  datum               date    [not null]
  uebertrag_urlaub    decimal(5,1)
  uebertrag_ueberstunden decimal(5,1)
  ang_wochen_std      decimal(10,3)
  monats_soll         decimal(10,3)

  indexes {
    (mitarbeiter_id, datum) [pk]
  }
}

// ─── URLAUB ──────────────────────────────────────────────────────────────────

Table urlaub {
  id                  integer [pk, increment]
  mitarbeiter_id      integer [not null, ref: > mitarbeiter.id]
  beginn              date
  ende                date
  tage_im_urlaub      integer
  beginn_in_worten    varchar(45)
  ende_in_worten      varchar(45)
  genehmigt           tinyint
  vertretung_id       integer [ref: > mitarbeiter.id]
  buero               integer
  buero_vertretung_id integer [ref: > mitarbeiter.id]
}

Table urlaub_kommentar {
  id             integer  [pk, increment]
  urlaub_id      integer  [not null, ref: > urlaub.id]
  mitarbeiter_id integer  [not null, ref: > mitarbeiter.id]
  kommentar      text     [not null]
  erstellt_am    datetime
}

Table urlaubssperre {
  id          integer [pk, increment]
  von         date
  bis         date
  ganzjaehrig integer
}

// ─── EVENTS ──────────────────────────────────────────────────────────────────

Table event {
  id                integer     [pk, increment]
  standort_id       integer     [not null, ref: > standorte.id]
  start             date
  ende              date
  titel             varchar(45)
  eventtyp          varchar(45) [not null]
  klassen           varchar(45)
  urlaub_akzeptabel integer
  in_urlaub         integer     [not null]
  status            integer     [not null]
  bemerkung         text
}

Table urlaub_event {
  id        integer [pk, increment]
  urlaub_id integer [not null, ref: > urlaub.id]
  event_id  integer [not null, ref: > event.id]
}

// ─── PERSONALVERWALTUNG ──────────────────────────────────────────────────────

Table eintritt {
  id              integer     [pk, increment]
  mitarbeiter_id  integer     [not null, ref: > mitarbeiter.id]
  eintrittsdatum  date
  std_woche       integer
  berufsjahr      integer
  einstufung      varchar(45)
  offener_urlaub  integer
}

Table abmeldung {
  id              integer [pk, increment]
  mitarbeiter_id  integer [not null, ref: > mitarbeiter.id]
  datum_abmeldung date
  datum_anmeldung date
  resturlaub      integer
}

Table aenderungsmeldung {
  id              integer [pk, increment]
  mitarbeiter_id  integer [not null, ref: > mitarbeiter.id]
  bearbeitet_von  integer [not null, ref: > mitarbeiter.id]
  datum           date
  std_woche       integer
  urlaubsanspruch integer
}

// ─── DOKUMENTE ───────────────────────────────────────────────────────────────

Table dokumente {
  id           integer     [pk, increment]
  url          varchar(400)
  upload_datum date
}

Table mitarbeiter_dokumente {
  mitarbeiter_id integer [not null, ref: > mitarbeiter.id]
  dokument_id    integer [not null, ref: > dokumente.id]

  indexes {
    (mitarbeiter_id, dokument_id) [pk]
  }
}

Table vorlagen {
  id  integer     [pk, increment]
  typ varchar(45)
  url varchar(400)
}

// ─── VIEWS (read-only) ───────────────────────────────────────────────────────

Table monatsbericht_view [note: "Aggregierte Monatsansicht — nicht direkt beschreibbar"] {
  mitarbeiter_id integer
  datum          date
  A              decimal(10,3)
  C              decimal(10,3)
  E              decimal(10,3)
  F              decimal(10,3)
  D              decimal(10,3)
  theorie        decimal(10,3)
  nacht          decimal(10,3)
  wochenende     decimal(10,3)
  gr10_pro_tag   decimal(10,3)
  lektion        decimal(10,3)
  regie          decimal(10,3)
  pruefung       decimal(10,3)
  krank          decimal(10,3)
  feiertag       decimal(10,3)
  urlaub         decimal(10,3)
}

// ─── GRUPPEN ─────────────────────────────────────────────────────────────────

TableGroup Kern {
  mitarbeiter
  standorte
}

TableGroup Zuordnungen {
  mitarbeiter_standorte
  standort_vertretung
  klassen
}

TableGroup Zeiterfassung {
  taetigkeitsart
  taetigkeit
  zuschlag
  uebertrag
}

TableGroup Urlaub {
  urlaub
  urlaub_kommentar
  urlaubssperre
  urlaub_event
  event
}

TableGroup Personal {
  eintritt
  abmeldung
  aenderungsmeldung
}

TableGroup Dokumente {
  dokumente
  mitarbeiter_dokumente
  vorlagen
}
